수정사항
