# src/print/print.controller.ts
@@ -1,7 +1,12 @@
-import { Controller, Query } from "@nestjs/common";
+import { Controller, Query } from '@nestjs/common';
 import { TypedBody, TypedQuery, TypedRoute } from '@nestia/core';
 import { PrintService } from './print.service';
-import { AreaQRTagRes, PrinterStatusCallbackReq, PrinterZoneType, QRTagReq } from "./print.type";
+import {
+  AreaQRTagRes,
+  PrinterStatusCallbackReq,
+  PrinterZoneType,
+  QRTagReq,
+} from './print.type';
 import { UserLoginType } from '../auth/userLogin.type';
 import { CurrentUser } from '../auth/jwt/getUser.decorator';
 import { ApiTags } from '@nestjs/swagger';
@@ -11,25 +16,13 @@ import { ApiTags } from '@nestjs/swagger';
 export class PrintController {
   constructor(private readonly printService: PrintService) {}
 
-  @TypedRoute.Post('area/QR')
-  @ApiTags('QR')
-  async areaQRTag(
-    @TypedBody() { printZoneId }: QRTagReq,
-    @CurrentUser() { id }: UserLoginType,
-  ): Promise<AreaQRTagRes> {
-    return this.printService.areaQRTag(printZoneId, id);
-  }
-
   @TypedRoute.Post('print/QR')
   @ApiTags('QR')
   async printerQRTag(
     @TypedBody() printerQRTagReq: PrinterZoneType,
     @CurrentUser() { id: userId }: UserLoginType,
   ): Promise<AreaQRTagRes> {
-    return this.printService.printerAssignmentWithPrintId(
-      printerQRTagReq,
-      userId,
-    );
+    return this.printService.printerQRTag(printerQRTagReq, userId);
   }
 
   @TypedRoute.Get('queue/seq')
@@ -48,11 +41,8 @@ export class PrintController {
     return this.printService.printExecute(printerQRTagReq, userId);
   }
 
-  @TypedRoute.Get("status/callback")
-  async printerStatusCallback(
-    @Query() callbackReq:PrinterStatusCallbackReq
-
-  ) {
+  @TypedRoute.Get('status/callback')
+  async printerStatusCallback(@Query() callbackReq: PrinterStatusCallbackReq) {
     return this.printService.printerStatusCallback(callbackReq);
   }
 }
